2013-10-03  Jan Hubicka  <jh@suse.cz>

	* config/i386/i386.c (ix86_issue_rate): Pentium4, Nocona has issue
	rate of 2.  Core2, Corei7 and Haswell has issue rate of 4.
	(ix86_adjust_cost): Remove Atom case; fix core2/corei7/Haswell case.

2013-10-03  Jan Hubicka  <jh@suse.cz>

	* config/i386/i386.c (ix86_option_override_internal): Do not enable
	accumulate-outgoing-args when producing unwind info.

2013-10-03  Wei Mi  <wmi@google.com>

	* lra-constraints.c (insert_move_for_subreg): New function
	extracted from simplify_operand_subreg.
	(simplify_operand_subreg): Add reload for paradoxical subreg.

2013-10-03  Rong Xu  <xur@google.com>

	* ipa-inline-analysis.c (find_foldable_builtin_expect): Find
	the candidate of builtin_expect such that we should fix the
	size/time estimation.
	(estimate_function_body_sizes): Do the acutally size/time fix-up
	for builtin_expect.

2013-10-03  Rong Xu  <xur@google.com>

	* predict.c (tree_predict_by_opcode): Get the probability
	for builtin_expect from param builtin_expect_probability.
	* params.def (BUILTIN_EXPECT_PROBABILITY): New parameter.
	* predict.def (PRED_BUILTIN_EXPECT_RELAXED): Fix comments.
	* doc/invoke.texi: Add documentation for builtin-expect-probability.

2013-10-03  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/19476
	* common.opt (fcheck-new): Moved from c.opt. Make it 'Common'.
	* calls.c (alloca_call_p): Use get_callee_fndecl.
	* fold-const.c (tree_expr_nonzero_warnv_p): Handle operator new.
	* tree-vrp.c (gimple_stmt_nonzero_warnv_p, stmt_interesting_for_vrp):
	Likewise.
	(vrp_visit_stmt): Remove duplicated code.

2013-10-03  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* config/rs6000/rs6000-builtin.def (XSRDPIM): Use floatdf2,
	ceildf2, btruncdf2, instead of vsx_* name.

	* config/rs6000/vsx.md (vsx_add<mode>3): Change arithmetic
	iterators to only do V2DF and V4SF here.  Move the DF code to
	rs6000.md where it is combined with SF mode.  Replace <VSv> with